feat: configured Identity to manage user

--- a/UsuariosApi/appsettings.json
+++ b/UsuariosApi/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "UsuarioConnection": ""
+    "UsuarioConnection": "server=localhost;database=usuariodb;user=root;password=root"
   }
 }
