--- a/UsuariosApi/UsuariosApi.csproj
+++ b/UsuariosApi/UsuariosApi.csproj
@@ -1,9 +1,10 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
+    <UserSecretsId>c0165c6a-306a-4932-973e-49c67be1f540</UserSecretsId>
   </PropertyGroup>
 
   <ItemGroup>
